force-app/main/default/objects/Contract__c/fields/NAV_Unit_text_value__c.field-meta.xml
<CustomField>
    <fullName>NAV_Unit_text_value__c</fullName>
    <label>NAV Unit text value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>