force-app/main/default/objects/Contract__c/fields/TAG_AccountOrganizationNumber__c.field-meta.xml
<CustomField>
    <fullName>TAG_AccountOrganizationNumber__c</fullName>
    <formula>TAG_Account__r.CRM_AccountType__c  +  &quot; - &quot; + TAG_Account__r.INT_OrganizationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Organization Number</label>
    <type>Text</type>
</CustomField>