force-app/main/default/objects/Contract__c/fields/TAG_DialogueActive__c.field-meta.xml
<CustomField>
    <fullName>TAG_DialogueActive__c</fullName>
    <formula>IF( Thread__r.CRM_Is_Closed__c = false &amp;&amp; TAG_EndDate__c &gt; (TODAY() - 84) &amp;&amp; (ISPICKVAL(TAG_Status__c, &quot;GJENNOMFØRES&quot;) || ISPICKVAL(TAG_Status__c, &quot;AVSLUTTET&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialogue active</label>
    <type>Checkbox</type>
</CustomField>