force-app/main/default/objects/Contract__c/fields/TAG_DialogueURL__c.field-meta.xml
<CustomField>
    <fullName>TAG_DialogueURL__c</fullName>
    <formula>IF($Organization.Id = &quot;00D0E000000DttS&quot;, 

&quot;https://navdialog--sit2.sandbox.my.site.com/arbeidsgiverdialogtest/s/?organisasjonsnummer=&quot;&amp;TAG_Account__r.INT_OrganizationNumber__c + &quot;?avtalenummer=&quot;&amp;ExternalId__c, 

&quot;https://arbeidsgiverdialog.nav.no/s/?organisasjonsnummer=&quot;&amp;TAG_Account__r.INT_OrganizationNumber__c + &quot;?avtalenummer=&quot;&amp;ExternalId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialogue URL</label>
    <type>Text</type>
</CustomField>