force-app/main/default/objects/Contract__c/fields/TAG_EndDialogue__c.field-meta.xml
<CustomField>
    <fullName>TAG_EndDialogue__c</fullName>
    <formula>IF( TAG_EndDate__c &lt; (TODAY() - 84) &amp;&amp; ISPICKVAL(TAG_Status__c, &quot;AVSLUTTET&quot;) &amp;&amp; NOT(ISPICKVAL(Thread__r.CRM_Journal_Status__c , &quot;Journal Completed&quot; )) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End dialogue</label>
    <type>Checkbox</type>
</CustomField>