force-app/main/default/objects/Contract__c/fields/TAG_IsAccountNAV__c.field-meta.xml
<CustomField>
    <fullName>TAG_IsAccountNAV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account NAV?</label>
    <type>Checkbox</type>
</CustomField>