force-app/main/default/objects/Contract__c/fields/TAG_IsConsideredForRedaction__c.field-meta.xml
<CustomField>
    <fullName>TAG_IsConsideredForRedaction__c</fullName>
    <formula>Thread__r.STO_Sensitive_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dersom dette feltet er avhuket, betyr det at samtalen er sendt sladding. Dvs at et sladde-team for øyeblikket vurderer om hele eller deler av samtalen skal sladdes</inlineHelpText>
    <label>Is Considered for Redaction?</label>
    <type>Checkbox</type>
</CustomField>