force-app/main/default/objects/Contract__c/fields/TAG_Last_Message__c.field-meta.xml
<CustomField>
    <fullName>TAG_Last_Message__c</fullName>
    <formula>Thread__r.CRM_Latest_Message_Datetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dato for siste beskjed.</inlineHelpText>
    <label>Last Message</label>
    <type>Date</type>
</CustomField>