force-app/main/default/objects/Contract__c/fields/TAG_Link_to_dialogue__c.field-meta.xml
<CustomField>
    <fullName>TAG_Link_to_dialogue__c</fullName>
    <formula>hyperlink(&quot;/lightning/r/&quot;+Id+&quot;/view&quot;,&quot;Se dialog&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to dialogue</label>
    <type>Text</type>
</CustomField>