force-app/main/default/objects/Contract__c/fields/TAG_Link_to_dialouge__c.field-meta.xml
<CustomField>
    <fullName>TAG_Link_to_dialouge__c</fullName>
    <formula>hyperlink(&quot;https://navdialog.lightning.force.com/lightning/r/&quot;+Id+&quot;/view&quot;,&quot;Se dialog&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to dialouge</label>
    <type>Text</type>
</CustomField>