force-app/main/default/objects/Contract__c/fields/TAG_Read_by_NAV__c.field-meta.xml
<CustomField>
    <fullName>TAG_Read_by_NAV__c</fullName>
    <formula>Thread__r.TAG_Number_of_unread_messages_fro__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message is not read by NAV</label>
    <type>Checkbox</type>
</CustomField>