force-app/main/default/objects/Contract__c/fields/TAG_sentwelcomemessage__c.field-meta.xml
<CustomField>
    <fullName>TAG_sentwelcomemessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TAG_sentwelcomemessage</label>
    <type>Checkbox</type>
</CustomField>