force-app/main/default/objects/Contract__c/fields/TAG_SourceURL__c.field-meta.xml
<CustomField>
    <fullName>TAG_SourceURL__c</fullName>
    <formula>IF($Organization.Id = &quot;00D0E000000DttS&quot;,  HYPERLINK(&quot;https://tiltaksgjennomforing.intern.dev.nav.no/tiltaksgjennomforing/avtale/&quot;&amp;KafkaId__c + &quot;?bedrift=&quot;&amp;TAG_Account__r.INT_OrganizationNumber__c, &quot;Tiltaksgjennomforing&quot;, &quot;_self&quot;) ,  HYPERLINK(&quot;https://arbeidsgiver.nav.no/tiltaksgjennomforing/avtale/&quot;&amp;KafkaId__c + &quot;?bedrift=&quot;&amp;TAG_Account__r.INT_OrganizationNumber__c , &quot;Tiltaksgjennomføring&quot;, &quot;_self&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lenke til kontrakten i Tiltaksløsningen</inlineHelpText>
    <label>Source URL</label>
    <type>Text</type>
</CustomField>