force-app/main/default/objects/Contract__c/fields/TAG_TimeLastSentSMS__c.field-meta.xml
<CustomField>
    <fullName>TAG_TimeLastSentSMS__c</fullName>
    <label>Time Last Sent SMS</label>
    <type>DateTime</type>
</CustomField>