force-app/main/default/objects/Contract__c/fields/TAG_WrongStatusPastEndDate__c.field-meta.xml
<CustomField>
    <fullName>TAG_WrongStatusPastEndDate__c</fullName>
    <description>This field checks if the end date of the contract has passed, when the status is still GJENNOMFØRES. It is used as condition in the flow TAG Dialogue Create Journal Entry Scheduled</description>
    <formula>IF( TAG_EndDate__c &lt; TODAY() &amp;&amp;  ISPICKVAL(TAG_Status__c, &apos;GJENNOMFØRES&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wrong Status Past End Date</label>
    <type>Checkbox</type>
</CustomField>