force-app/main/default/objects/Contract__c/recordTypes/TiltakAgreement.recordType-meta.xml
<RecordType>
    <fullName>TiltakAgreement</fullName>
    <active>true</active>
    <description>Agreement for Tiltaksgjennomføring</description>
    <label>Tiltak Agreement</label>
</RecordType>