force-app/main/default/objects/Contract__c/listViews/Mine_L_nnstilskudd.listView-meta.xml
<ListView>
    <fullName>Mine_L_nnstilskudd</fullName>
    <columns>TAG_Link_to_dialouge__c</columns>
    <columns>TAG_Account__c</columns>
    <columns>TAG_StartDate__c</columns>
    <columns>TAG_EndDate__c</columns>
    <columns>TAG_Status__c</columns>
    <columns>TAG_Last_Message__c</columns>
    <columns>TAG_Read_by_NAV__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.MeasureAgreement</value>
    </filters>
    <filters>
        <field>TAG_Status__c</field>
        <operation>equals</operation>
        <value>AVSLUTTET,GJENNOMFØRES</value>
    </filters>
    <label>Mine Lønnstilskudd</label>
</ListView>