force-app/main/default/objects/Contract__c/listViews/Mitt_NAV_kontor_Dialoger.listView-meta.xml
<ListView>
    <fullName>Mitt_NAV_kontor_Dialoger</fullName>
    <columns>TAG_Link_to_dialouge__c</columns>
    <columns>TAG_Account__c</columns>
    <columns>TAG_Read_by_NAV__c</columns>
    <columns>TAG_Category__c</columns>
    <columns>TAG_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.MeasureAgreement</value>
    </filters>
    <filters>
        <field>TAG_DialogueActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TAG_Read_by_NAV__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TAG_Category__c</field>
        <operation>equals</operation>
        <value>MIDLERTIDIG_LONNSTILSKUDD,ARBEIDSTRENING</value>
    </filters>
    <label>Uleste meldinger</label>
</ListView>